// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayBox Component Matches the 'with icon' snapshot 1`] = `
<div
  className="display-box "
>
  <div
    className="display-icon"
  >
    <svg
      fill="currentColor"
      height={32}
      size={32}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={32}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
  </div>
  <div
    className="display-right-element"
  >
    <div
      className="bcgov-table "
    >
      <b>
        
      </b>
      <div
        className="bcgov-table-body"
      >
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            BCeID
          </div>
          <div
            className="bcgov-table-value "
          >
            bobross42
          </div>
        </div>
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            Last Name
          </div>
          <div
            className="bcgov-table-value "
          >
            Ross
          </div>
        </div>
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            First Name
          </div>
          <div
            className="bcgov-table-value "
          >
            Bob
          </div>
        </div>
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            Email Address
          </div>
          <div
            className="bcgov-table-value "
          >
            bob.ross@example.com
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DisplayBox Component Matches the 'without icon' snapshot 1`] = `
<div
  className="display-box "
>
  <div
    className="display-right-element"
  >
    <div
      className="bcgov-table "
    >
      <b>
        
      </b>
      <div
        className="bcgov-table-body"
      >
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            BCeID
          </div>
          <div
            className="bcgov-table-value "
          >
            bobross42
          </div>
        </div>
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            Last Name
          </div>
          <div
            className="bcgov-table-value "
          >
            Ross
          </div>
        </div>
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            First Name
          </div>
          <div
            className="bcgov-table-value "
          >
            Bob
          </div>
        </div>
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            Email Address
          </div>
          <div
            className="bcgov-table-value "
          >
            bob.ross@example.com
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DisplayBox Component Matches the blue-background snapshot 1`] = `
<div
  className="display-box blue-background"
>
  <div
    className="display-icon"
  >
    <svg
      fill="currentColor"
      height={32}
      size={32}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={32}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
  </div>
  <div
    className="display-right-element"
  >
    <div
      className="bcgov-table "
    >
      <b>
        
      </b>
      <div
        className="bcgov-table-body"
      >
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            BCeID
          </div>
          <div
            className="bcgov-table-value "
          >
            bobross42
          </div>
        </div>
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            Last Name
          </div>
          <div
            className="bcgov-table-value "
          >
            Ross
          </div>
        </div>
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            First Name
          </div>
          <div
            className="bcgov-table-value "
          >
            Bob
          </div>
        </div>
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            Email Address
          </div>
          <div
            className="bcgov-table-value "
          >
            bob.ross@example.com
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DisplayBox Component Matches the warning snapshot 1`] = `
<div
  className="display-box warning-background"
>
  <div
    className="display-icon"
  >
    <svg
      fill="currentColor"
      height={32}
      size={32}
      stroke="currentColor"
      strokeWidth="0"
      style={
        Object {
          "color": undefined,
        }
      }
      viewBox="0 0 24 24"
      width={32}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
      />
    </svg>
  </div>
  <div
    className="display-right-element"
  >
    <div
      className="bcgov-table "
    >
      <b>
        
      </b>
      <div
        className="bcgov-table-body"
      >
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            BCeID
          </div>
          <div
            className="bcgov-table-value "
          >
            bobross42
          </div>
        </div>
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            Last Name
          </div>
          <div
            className="bcgov-table-value "
          >
            Ross
          </div>
        </div>
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            First Name
          </div>
          <div
            className="bcgov-table-value "
          >
            Bob
          </div>
        </div>
        <div
          className="bcgov-row "
        >
          <div
            className="bcgov-vertical-middle "
          >
            Email Address
          </div>
          <div
            className="bcgov-table-value "
          >
            bob.ross@example.com
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
